fixed ticket #465 where the singleton slot controls were covering the button
git-svn-id: http://svn.apostrophenow.org/plugins/apostrophePlugin/trunk@2210 c89fab08-2f9b-42bf-8176-bd3ad6bee547

--- a/web/css/a-area-slots.css
+++ b/web/css/a-area-slots.css
@@ -80,6 +80,8 @@ clear: none;
 
 .a-area.singleton .a-slot-controls { display: none; } /* There are no such thing as slot controls for singleton areas. This prevents the page wiggle on load */
 
+.a-area.singleton .a-slot-form { padding-top: 24px; } /* Singleton controls by default sit on top of the slot. So we must push down the edit view to prevent it from getting covered by the slot controls*/
+
 .a-area.singleton.aRichText > .a-controls,
 .a-area.singleton.aText > .a-controls,
 .a-area.singleton.aBlog > .a-controls,
